[gd_scene load_steps=5 format=2]

[ext_resource path="res://Lecture2/Torb.gd" type="Script" id=1]
[ext_resource path="res://LineRenderer/LineRenderer.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0.486275, 0, 1 )
emission_enabled = true
emission = Color( 1, 0.556863, 0, 1 )
emission_energy = 0.5
emission_operator = 0
emission_on_uv2 = false

[node name="Torb" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.523313, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.35, 0, 0, 0, -1.5299e-08, 0.35, 0, -0.35, -1.5299e-08, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.28558, 0 )

[node name="ViewLine" parent="." instance=ExtResource( 2 )]
points = [  ]

[node name="NormalLine" parent="." instance=ExtResource( 2 )]

[node name="TangentLine" parent="." instance=ExtResource( 2 )]
